--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # The directory Mix downloads your dependencies sources to.
 /deps/
 
+/upload/
+
 # Where 3rd-party dependencies like ExDoc output generated docs.
 /doc/
 
